--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        " 'weather_app']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "[]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -470,9 +470,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 83.0.4103\n",
       "Get LATEST driver version for 83.0.4103\n",
-      "Get LATEST driver version for 83.0.4103\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/83.0.4103.39/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/jennamurphy/.wdm/drivers/chromedriver/mac64/83.0.4103.39]\n"
+      "Driver [/Users/jennamurphy/.wdm/drivers/chromedriver/mac64/83.0.4103.39/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -484,14 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,28 +499,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NASA's Curiosity Mars Rover Takes a New Selfie Before Record Climb\n",
+      "NASA's Mars 2020 Rover Goes Coast-to-Coast to Prep for Launch\n",
       "NASA's Perseverance Rover Mission Getting in Shape for Launch\n",
-      "NASA's Perseverance Rover Will Carry First Spacesuit Materials to Mars\n",
-      "The MarCO Mission Comes to an End\n",
-      "NASA Invites Students to Name Mars 2020 Rover\n",
+      "Two Rovers to Roll on Mars Again: Curiosity and Mars 2020\n",
+      "The Launch Is Approaching for NASA's Next Mars Rover, Perseverance\n",
+      "Mars Helicopter Attached to NASA's Perseverance Rover\n",
+      "3 Things We've Learned From NASA's Mars InSight \n",
       "Robotic Toolkit Added to NASA's Mars 2020 Rover\n",
-      "A New Video Captures the Science of NASA's Perseverance Mars Rover\n",
-      "MAVEN Maps Electric Currents around Mars that are Fundamental to Atmospheric Loss\n",
       "My Culture, My Voice\n",
-      "Global Storms on Mars Launch Dust Towers Into the Sky\n",
-      "With Mars Methane Mystery Unsolved, Curiosity Serves Scientists a New One: Oxygen\n",
-      "NASA's New Mars Rover Is Ready for Space Lasers\n",
-      "Mars 2020 Unwrapped and Ready for More Testing\n",
-      "NASA Engineers Checking InSight's Weather Sensors\n",
-      "NASA Updates Mars 2020 Mission Environmental Review\n"
+      "Two of a Space Kind: Apollo 12 and Mars 2020\n",
+      "NASA's Push to Save the Mars InSight Lander's Heat Probe\n",
+      "Mars 2020 Stands on Its Own Six Wheels\n",
+      "NASA to Broadcast Mars 2020 Perseverance Launch, Prelaunch Activities\n",
+      "Common Questions about InSight's 'Mole'\n",
+      "MAVEN Maps Electric Currents around Mars that are Fundamental to Atmospheric Loss\n",
+      "NASA's Perseverance Rover Bringing 3D-Printed Metal Parts to Mars\n"
      ]
     }
    ],
@@ -558,28 +556,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Along with capturing an image before its steepest ascent ever, the robotic explorer filmed its \"selfie stick,\" or robotic arm, in action.\n",
+      "The agency's first step in returning rocks from Mars just arrived at Kennedy Space Center. The Mars 2020 team now begins readying for a launch to the Red Planet this July.\n",
       "Stacking spacecraft components on top of each other is one of the final assembly steps before a mission launches to the Red Planet. \n",
-      "In a Q&A, spacesuit designer Amy Ross explains how five samples, including a piece of helmet visor, will be tested aboard the rover, which is targeting a July 30 launch. \n",
-      "The pair of briefcase-sized satellites made history when they sailed past Mars in 2019.\n",
-      "Through Nov. 1, K-12 students in the U.S. are encouraged to enter an essay contest to name NASA's next Mars rover.\n",
+      "They look like twins. But under the hood, the rover currently exploring the Red Planet and the one launching there this summer have distinct science tools and roles to play.\n",
+      "The Red Planet's surface has been visited by eight NASA spacecraft. The ninth will be the first that includes a roundtrip ticket in its flight plan. \n",
+      "The team also fueled the rover's sky crane to get ready for this summer's history-making launch.\n",
+      "Scientists are finding new mysteries since the geophysics mission landed two years ago.\n",
       "The bit carousel, which lies at the heart of the rover's Sample Caching System, is now aboard NASA's newest rover. \n",
-      "With a targeted launch date of July 30, the next robotic scientist NASA is sending to the to the Red Planet has big ambitions.\n",
-      "Five years after NASA’s MAVEN spacecraft entered into orbit around Mars, data from the mission has led to the creation of a map of electric current systems in the Martian atmosphere.\n",
       "In honor of Hispanic Heritage Month, Christina Hernandez, an instrument engineer on the Mars 2020 mission, talks about her childhood and journey to NASA.\n",
-      "A Mars Dust Tower Stands Out Dust storms are common on Mars. But every decade or so, something unpredictable happens: a series of runaway storms break out, covering the entire planet in a dusty haze.\n",
-      "For the first time in the history of space exploration, scientists have measured the seasonal changes in the gases that fill the air directly above the surface of Gale Crater on Mars. \n",
-      "Perseverance is one of a few Mars spacecraft carrying laser retroreflectors. The devices could provide new science and safer Mars landings in the future.\n",
-      "In time-lapse video, bunny-suited engineers remove the inner layer of protective foil on NASA's Mars 2020 rover after it was relocated for testing.\n",
-      "An electronics issue is suspected to be preventing the sensors from sharing their data about Mars weather with the spacecraft.\n",
-      "NASA and the Department of Energy have completed a more detailed risk analysis for the Mars 2020 rover launch from Florida.\n"
+      "Apollo 12 and the upcoming Mars 2020 mission may be separated by half a century, but they share several goals unique in the annals of space exploration.\n",
+      "The scoop on the end of the spacecraft's robotic arm will be used to 'pin' the mole against the wall of its hole.\n",
+      "In time-lapse video, taken at JPL, captures the first time NASA's Mars 2020 rover carries its full weight on its legs and wheels.\n",
+      "Starting July 27, news activities will cover everything from mission engineering and science to returning samples from Mars to, of course, the launch itself.\n",
+      "The following Q&As with members of the team answer some of the most common questions about the burrowing device, part of a science instrument called the Heat Flow and Physical Properties Package (HP3).\n",
+      "Five years after NASA’s MAVEN spacecraft entered into orbit around Mars, data from the mission has led to the creation of a map of electric current systems in the Martian atmosphere.\n",
+      "For hobbyists and makers, 3D printing expands creative possibilities; for specialized engineers, it's also key to next-generation spacecraft design.\n"
      ]
     }
    ],
@@ -592,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,14 +624,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image/featured/mars1.jpg\n"
+      "image/featured/mars2.jpg\n"
      ]
     }
    ],
@@ -643,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,14 +650,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://spaceimages-mars.com/image/featured/mars1.jpg\n"
+      "https://spaceimages-mars.com/image/featured/mars2.jpg\n"
      ]
     }
    ],
@@ -669,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +702,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +787,7 @@
        "4       Distance from Sun:   227,943,824 km   149,598,262 km"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +808,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n      <th>2</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Mars - Earth Comparison</td>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +829,7 @@
        "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>0</th>      <th>1</th>      <th>2</th>    </tr>  </thead>  <tbody>    <tr>      <th>0</th>      <td>Mars - Earth Comparison</td>      <td>Mars</td>      <td>Earth</td>    </tr>    <tr>      <th>1</th>      <td>Diameter:</td>      <td>6,779 km</td>      <td>12,742 km</td>    </tr>    <tr>      <th>2</th>      <td>Mass:</td>      <td>6.39 × 10^23 kg</td>      <td>5.97 × 10^24 kg</td>    </tr>    <tr>      <th>3</th>      <td>Moons:</td>      <td>2</td>      <td>1</td>    </tr>    <tr>      <th>4</th>      <td>Distance from Sun:</td>      <td>227,943,824 km</td>      <td>149,598,262 km</td>    </tr>    <tr>      <th>5</th>      <td>Length of Year:</td>      <td>687 Earth days</td>      <td>365.24 days</td>    </tr>    <tr>      <th>6</th>      <td>Temperature:</td>      <td>-87 to -5 °C</td>      <td>-88 to 58°C</td>    </tr>  </tbody></table>'"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 386,
    "metadata": {
     "scrolled": true
    },
@@ -920,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,6 +1000,7 @@
     "title_list = []\n",
     "new={}\n",
     "content = []\n",
+    "\n",
     "\n",
     "for link in hem_url_list:\n",
     "    url_new = link\n",
@@ -1014,24 +1013,28 @@
     "\n",
     "    featured_link_test = soup.find_all('a')\n",
     "    \n",
+    "#     t_text = title.text\n",
+    "#     l_text = link['href']\n",
+    "#     if any(d['title'] == title.text for d in content):\n",
     "\n",
     "    for title in featured_title:\n",
-    "        if title not in new.values():\n",
-    "#             title_list.append(title.text)\n",
-    "            new['title'] = title.text\n",
-    "            content.append(new)\n",
+    "    #       if title.text not in content.items():\n",
+    "    #             title_list.append(title.text)\n",
+    "                new['title'] = title.text\n",
+    "                content.append(new)\n",
     "\n",
     "    for link in featured_link_test:\n",
-    "        if link not in new.values():\n",
+    "#         if not any(d['img_url'] == link['href'] for d in content):\n",
+    "    #         if link['href'] not in content.items():\n",
     "            if link.text == 'Sample':\n",
-    "#                 img_url_link.append(link['href'])\n",
+    "    #                 img_url_link.append(link['href'])\n",
     "                new['img_url'] = 'https://marshemispheres.com/' + link['href']\n",
-    "                content.append(new)"
+    "                content.append(new)        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [
     {
@@ -1045,6 +1048,13 @@
    "source": [
     "print(content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
