--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        " 'weather_app']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -441,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Space Image\n"
+      "News - Mars Exploration Program\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,28 +500,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "NASA's Curiosity Rover Finds an Ancient Oasis on Mars\n",
+      "8 Martian Postcards to Celebrate Curiosity's Landing Anniversary\n",
+      "Mars InSight Lander to Push on Top of the 'Mole'\n",
+      "A Year of Surprising Science From NASA's InSight Mars Mission\n",
+      "NASA Engineers Checking InSight's Weather Sensors\n",
+      "The MarCO Mission Comes to an End\n",
+      "NASA's Perseverance Rover Will Peer Beneath Mars' Surface \n",
+      "Meet the People Behind NASA's Perseverance Rover\n",
+      "NASA's Mars Helicopter Attached to Mars 2020 Rover \n",
+      "Three New Views of Mars' Moon Phobos\n",
+      "What's Mars Solar Conjunction, and Why Does It Matter?\n",
       "How NASA's Mars Helicopter Will Reach the Red Planet's Surface\n",
-      "MAVEN Maps Electric Currents around Mars that are Fundamental to Atmospheric Loss\n",
-      "NASA's Mars Perseverance Rover Passes Flight Readiness Review\n",
-      "Nine Finalists Chosen in NASA's Mars 2020 Rover Naming Contest\n",
-      "The Launch Is Approaching for NASA's Next Mars Rover, Perseverance\n",
-      "NASA Perseverance Mars Rover Scientists Train in the Nevada Desert\n",
-      "NASA's Curiosity Mars Rover Snaps Its Highest-Resolution Panorama Yet\n",
-      "Mars Helicopter Attached to NASA's Perseverance Rover\n",
-      "NASA Invites Public to Share Excitement of Mars 2020 Perseverance Rover Launch\n",
-      "Mars 2020 Unwrapped and Ready for More Testing\n",
-      "NASA Updates Mars 2020 Mission Environmental Review\n",
-      "NASA's Perseverance Rover Mission Getting in Shape for Launch\n",
-      "NASA Wins Two Emmy Awards for Interactive Mission Coverage\n",
-      "NASA's New Mars Rover Is Ready for Space Lasers\n",
-      "NASA's Perseverance Rover Goes Through Trials by Fire, Ice, Light and Sound\n"
+      "NASA's Treasure Map for Water Ice on Mars\n",
+      "Follow NASA's Perseverance Rover in Real Time on Its Way to Mars\n",
+      "NASA's Mars 2020 Heads Into the Test Chamber\n"
      ]
     }
    ],
@@ -557,28 +557,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New evidence suggests salty, shallow ponds once dotted a Martian crater — a sign of the planet's drying climate.\n",
+      "The NASA rover touched down eight years ago, on Aug. 5, 2012, and will soon be joined by a second rover, Perseverance.\n",
+      "Engineers have a plan for pushing down on the heat probe, which has been stuck at the Martian surface for a year.\n",
+      "A batch of new papers summarizes the lander's findings above and below the surface of the Red Planet.\n",
+      "An electronics issue is suspected to be preventing the sensors from sharing their data about Mars weather with the spacecraft.\n",
+      "The pair of briefcase-sized satellites made history when they sailed past Mars in 2019.\n",
+      "The agency's newest rover will use the first ground-penetrating radar instrument on the Martian surface to help search for signs of past microbial life. \n",
+      "These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \n",
+      "The helicopter will be first aircraft to perform flight tests on another planet.\n",
+      "Taken with the infrared camera aboard NASA's Odyssey orbiter, they reveal temperature variations on the small moon as it drifts into and out of Mars’ shadow.\n",
+      "NASA spacecraft at Mars are going to be on their own for a few weeks when the Sun comes between Mars and Earth, interrupting communications.\n",
       "The small craft will seek to prove that powered, controlled flight is possible on another planet. But just getting it onto the surface of Mars will take a whole lot of ingenuity.\n",
-      "Five years after NASA’s MAVEN spacecraft entered into orbit around Mars, data from the mission has led to the creation of a map of electric current systems in the Martian atmosphere.\n",
-      "​The agency's Mars 2020 mission has one more big prelaunch review – the Launch Readiness Review, on July 27.\n",
-      "Nine finalists have been chosen in the essay contest for K-12 students across U.S. to name NASA's next Mars rover. Now you can help by voting for your favorite. \n",
-      "The Red Planet's surface has been visited by eight NASA spacecraft. The ninth will be the first that includes a roundtrip ticket in its flight plan. \n",
-      "Team members searched for signs of ancient microscopic life there, just as NASA's latest rover will on the Red Planet next year.\n",
-      "To go along with the stunning 1.8-billion-pixel image, a new video offers a sweeping view of the Red Planet.\n",
-      "The team also fueled the rover's sky crane to get ready for this summer's history-making launch.\n",
-      "There are lots of ways to participate in the historic event, which is targeted for July 30.\n",
-      "In time-lapse video, bunny-suited engineers remove the inner layer of protective foil on NASA's Mars 2020 rover after it was relocated for testing.\n",
-      "NASA and the Department of Energy have completed a more detailed risk analysis for the Mars 2020 rover launch from Florida.\n",
-      "Stacking spacecraft components on top of each other is one of the final assembly steps before a mission launches to the Red Planet. \n",
-      "NASA-JPL's coverage of the Mars InSight landing earns one of the two wins, making this the NASA center's second Emmy.\n",
-      "Perseverance is one of a few Mars spacecraft carrying laser retroreflectors. The devices could provide new science and safer Mars landings in the future.\n",
-      "The agency's new Mars rover is put through a series of tests in vacuum chambers, acoustic chambers and more to get ready for the Red Planet.\n"
+      "A new study identifies frozen water just below the Martian surface, where astronauts could easily dig it up.\n",
+      "A crisply rendered web application can show you where the agency's Mars 2020 mission is right now as it makes its way to the Red Planet for a Feb. 18, 2021, landing.\n",
+      "In this time-lapse video taken at JPL, engineers move the Mars 2020 rover into a large vacuum chamber for testing in Mars-like environmental conditions.\n"
      ]
     }
    ],
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,14 +625,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image/featured/mars3.jpg\n"
+      "image/featured/mars2.jpg\n"
      ]
     }
    ],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,14 +651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://spaceimages-mars.com/image/featured/mars3.jpg\n"
+      "https://spaceimages-mars.com/image/featured/mars2.jpg\n"
      ]
     }
    ],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "4       Distance from Sun:   227,943,824 km   149,598,262 km"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n      <th>2</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Mars - Earth Comparison</td>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>0</th>      <th>1</th>      <th>2</th>    </tr>  </thead>  <tbody>    <tr>      <th>0</th>      <td>Mars - Earth Comparison</td>      <td>Mars</td>      <td>Earth</td>    </tr>    <tr>      <th>1</th>      <td>Diameter:</td>      <td>6,779 km</td>      <td>12,742 km</td>    </tr>    <tr>      <th>2</th>      <td>Mass:</td>      <td>6.39 × 10^23 kg</td>      <td>5.97 × 10^24 kg</td>    </tr>    <tr>      <th>3</th>      <td>Moons:</td>      <td>2</td>      <td>1</td>    </tr>    <tr>      <th>4</th>      <td>Distance from Sun:</td>      <td>227,943,824 km</td>      <td>149,598,262 km</td>    </tr>    <tr>      <th>5</th>      <td>Length of Year:</td>      <td>687 Earth days</td>      <td>365.24 days</td>    </tr>    <tr>      <th>6</th>      <td>Temperature:</td>      <td>-87 to -5 °C</td>      <td>-88 to 58°C</td>    </tr>  </tbody></table>'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 208,
    "metadata": {
     "scrolled": true
    },
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,34 +1014,18 @@
     "    title_list.append(featured_title)\n",
     "    featured_links = soup.find_all('a')\n",
     "    \n",
-    "    \n",
-    "#     new['title'] = featured_title\n",
     "\n",
-    "#     featured_link_test = soup.find_all('a')\n",
-    "    \n",
-    "#     t_text = title.text\n",
-    "#     l_text = link['href']\n",
-    "#     if any(d['title'] == title.text for d in content):\n",
-    "\n",
-    "#     for title in title_list:\n",
-    "#     #       if title.text not in content.items():\n",
-    "#     #             title_list.append(title.text)\n",
-    "#                 new['title'] = title.text\n",
-    "#                 content.append(new)\n",
-    "#     temp_list = []\n",
     "    for link in featured_links:\n",
-    "#         if not any(d['img_url'] == link['href'] for d in content):\n",
-    "    #         if link['href'] not in content.items():\n",
+    "\n",
     "            if (link.text == 'Sample'):\n",
-    "    #                 img_url_link.append(link['href'])\n",
-    "#                 new['img_url'] = 'https://marshemispheres.com/' + link['href']\n",
+    "\n",
     "                img_url = 'https://marshemispheres.com/' + link['href']\n",
     "                img_url_link.append(img_url)        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1124,6 +1108,13 @@
     "\n",
     "print(hemisphere_image_urls)     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
